test/Fixtures/InvalidSuites/Test/TooFewParams.php
<?hh // strict

namespace HackPack\HackUnit\Tests\Fixtures\InvalidSuites\Test;

<<TestSuite>>
class TooFewParams
{
    <<Test>>
    public function test() : void
    {
    }
}
